Add job orchestrator initial settings
